SonarCloud configuration - automated static analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,28 +1,17 @@
+sonar.projectKey=Carloossff_Biblioteca_Virtual
+sonar.organization=carloossff
 
-# sonar-project.properties
-sonar.projectKey=biblioteca-virtual
-sonar.projectName=Sistema Biblioteca Virtual
+# Esta es la información mostrada en SonarCloud UI
+sonar.projectName=Biblioteca_Virtual
 sonar.projectVersion=1.0
 
-# Información del proyecto
-sonar.organization=biblioteca-org
-sonar.projectDescription=Proyecto Integrador - Sistema de autenticación y autorización para biblioteca virtual
-
-# Configuración de código fuente
+# Configuración de código fuente  
 sonar.sources=app/
-sonar.exclusions=**/venv/**,**/__pycache__/**,**/node_modules/**,**/.git/**,**/tests/**
+sonar.exclusions=**/venv/**,**/__pycache__/**,**/node_modules/**,**/.git/**,**/*.db,**/*.html
 
-# Configuración Python
-sonar.python.version=3.8,3.9,3.10,3.11
-sonar.python.coverage.reportPaths=coverage.xml
+# Python específico
+sonar.python.version=3.8,3.9,3.10,3.11,3.12
 
 # Configuración de calidad
 sonar.coverage.exclusions=**/*test*.py,**/test_*.py,**/*tests*.py
 sonar.cpd.exclusions=**/*test*.py
-
-# URLs y configuración del servidor (para SonarCloud)
-# sonar.host.url=https://sonarcloud.io
-# sonar.login=tu-token-aqui
-
-# Configuración adicional para seguridad
-sonar.python.xunit.reportPath=test-results.xml
