🔧 Fix SonarCloud authentication 3

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,14 @@
-sonar.projectKey=Carloossff_Biblioteca_Virtual
-sonar.organization=carloossff
+sonar.projectKey=Carlooosfif_Biblioteca_Virtual
+sonar.organization=carlooosfif
 
-# Esta es la información mostrada en SonarCloud UI
-sonar.projectName=Biblioteca_Virtual
-sonar.projectVersion=1.0
 
-# Configuración de código fuente  
-sonar.sources=app/
-sonar.exclusions=**/venv/**,**/__pycache__/**,**/node_modules/**,**/.git/**,**/*.db,**/*.html
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Biblioteca_Virtual
+#sonar.projectVersion=1.0
 
-# Python específico
-sonar.python.version=3.8,3.9,3.10,3.11,3.12
 
-# Configuración de calidad
-sonar.coverage.exclusions=**/*test*.py,**/test_*.py,**/*tests*.py
-sonar.cpd.exclusions=**/*test*.py
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
