🔧 Fix SonarCloud authentication 4

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=Carlooosfif_Biblioteca_Virtual
 sonar.organization=carlooosfif
 
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Biblioteca_Virtual
