🔧 Fix SonarCloud authentication 5

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,24 @@
 sonar.projectKey=Carlooosfif_Biblioteca_Virtual
 sonar.organization=carlooosfif
 
+# Necesario para evitar análisis de C/C++/Objective-C (MANTENER)
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Biblioteca_Virtual
-#sonar.projectVersion=1.0
+# Información del proyecto
+sonar.projectName=Biblioteca_Virtual
+sonar.projectVersion=1.0
 
+# SOLO analizar código Python del backend
+sonar.sources=app/
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# EXCLUIR archivos innecesarios
+sonar.exclusions=**/venv/**,**/__pycache__/**,**/node_modules/**,**/.git/**,**/*.db,**/*.html,**/*.css,**/*.js,**/init_data.py,**/requirements.txt,**/frontend.html
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Configuración Python
+sonar.python.version=3.11
+sonar.sourceEncoding=UTF-8
+
+# Excluir cobertura (no tenemos tests)
+sonar.coverage.exclusions=**/*
